<resources>
    <string name="default_web_client_id" translatable="false">723380654288-grvcai2ike01rmq6m3ctg7gvm0fmuaro.apps.googleusercontent.com</string>

    <string name="app_name">Gusto</string>
    <string name="slogan">Cook with Joy</string>
    <string name="next">Next</string>
    <string name="join_now">Join Now</string>
    <string name="onboarding_title_plan">Plan your perfect week</string>
    <string name="onboarding_desc_plan">Turn meal planning into a joy with personalized recipes.</string>
    <string name="onboarding_title_discover">Discover New Cuisines</string>
    <string name="onboarding_desc_discover">Swipe through thousands of gourmet recipes tailored to your taste.</string>
    <string name="onboarding_title_save">Never Lose a Flavor</string>
    <string name="onboarding_desc_save">Save your favorite recipes with a single tap and create custom collections.</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_your_gusto_account">Login to your Gusto account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="gusto_example_com">gusto@example.com</string>
    <string name="sign_in">SignIn</string>
    <string name="sign_up">SignUp</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="please_wait">Please Wait…</string>
    <string name="or">Or</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="join_as_guest">join as guest</string>
    <string name="soon">Soon…</string>
    <string name="coming_soon">Coming Soon…</string>
    <string name="google">Google</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="warning">Warning</string>
    <string name="info">Info</string>
    <string name="invalid_email">Invalid Email, valid template: gusto@example.com</string>
    <string name="invalid_password">Password must be at least 6 characters, including a letter and a number and a special character.</string>
    <string name="passwords_mismatch">Password and Confirm Password must be the same</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="start_your_culinary_journey">Start your culinary journey</string>
    <string name="join_gusto">Join Gusto</string>
    <string name="discover">Discover</string>
    <string name="favourites">Favourites</string>
    <string name="my_meals">My Meals</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="add_to_plan">Add to Plan</string>
    <string name="featured">Featured</string>
    <string name="today_s_suggested_categories">Today\'s Suggested Categories</string>
    <string name="category_image">Category Image</string>
    <string name="popular_countries">Popular Countries</string>
    <string name="add_tags_e_g_beef">Add tags (e.g. #Beef)</string>
    <string name="search_meals_e_g_pesto_pasta">Search Meals (e.g. Pesto Pasta)</string>
    <string name="clear">Clear</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="add_meal">Add Meal</string>
    <string name="add">Add</string>
    <string name="items">Items</string>
    <string name="steps">Steps</string>
    <string name="breakfast">Breakfast</string>
    <string name="_8_00_am">8:00 AM</string>
    <string name="_7_30_pm">7:30 PM</string>
    <string name="dinner">Dinner</string>
    <string name="no_meal_scheduled">No Meal Scheduled</string>
    <string name="date">Date</string>
    <string name="meal_type">Meal Type</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="please_sign_in">Please Sign-in to use this feature :)</string>
    <string name="lost_in_space_no_data_found">Lost in space. (No data found)</string>
    <string name="lost_in_space_no_plans_found">Lost in space. (No Plans found)</string>
    <string name="lost_in_space_no_favourites_found">Lost in space. (No Favourites found)</string>
    <string name="system_default">System Default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
</resources>