<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/discoverFragment"
        android:icon="@drawable/selector_tab_discover"
        android:title="@string/discover" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/selector_tab_search"
        android:title="@string/search" />
    <item
        android:id="@+id/planFragment"
        android:icon="@drawable/selector_tab_calender"
        android:title="@string/my_meals" />
    <item
        android:id="@+id/favouriteFragment"
        android:icon="@drawable/selector_tab_favourite"
        android:title="@string/favourites" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/selector_tab_settings"
        android:title="@string/settings" />

</menu>