<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.search.SearchFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchMealTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="48dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchMealEditText"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/search"
            android:drawablePadding="12dp"
            android:drawableTint="@color/colorPrimary"
            android:imeOptions="actionDone"
            android:hint="@string/search_meals_e_g_pesto_pasta"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tag_search_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintEnd_toStartOf="@+id/clearBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchMealTextLayout">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/tag_search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_search_tag"
            android:drawableStart="@drawable/ic_hashtag"
            android:drawablePadding="12dp"
            android:hint="@string/add_tags_e_g_beef"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp"
            android:textColorHint="@color/colorTextMuted"
            app:fontFamily="@font/montserrat_regular" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_clear_background"
        android:text="@string/clear"
        android:textColor="@color/colorError"
        app:backgroundTint="@null"
        app:fontFamily="@font/montserrat_semibold"
        app:layout_constraintBottom_toBottomOf="@+id/tag_search_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tag_search_input_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tags_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_search_input_layout" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/search_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        app:dividerColor="@color/colorTextMuted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tags_recyclerview" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/meals_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_divider" />


</androidx.constraintlayout.widget.ConstraintLayout>